fix z-index

--- a/styles/runjs/_layout.sass
+++ b/styles/runjs/_layout.sass
@@ -112,3 +112,13 @@ section
 .banner
   z-index: 2
   position: relative
+
+.content > article > header
+  z-index: 2
+  position: relative
+
+
+img.big
+  display: block
+  margin-left: auto
+  margin-right: auto
